syntax = "proto3";

package berty.errcode;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "berty.tech/go/pkg/errcode";

option (gogoproto.benchgen_all) = false;
option (gogoproto.compare_all) = false;
option (gogoproto.description_all) = false;
option (gogoproto.enum_stringer_all) = false;
option (gogoproto.enumdecl_all) = true;
option (gogoproto.equal_all) = false;
option (gogoproto.face_all) = false;
option (gogoproto.gogoproto_import) = false;
option (gogoproto.goproto_enum_prefix_all) = false;
option (gogoproto.goproto_enum_stringer_all) = false;
option (gogoproto.goproto_extensions_map_all) = false;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_registration) = false;
//option (gogoproto.goproto_sizecache_all) = false;
option (gogoproto.goproto_stringer_all) = false;
//option (gogoproto.goproto_unkeyed_all) = false;
option (gogoproto.goproto_unrecognized_all) = false;
option (gogoproto.gostring_all) = false;
option (gogoproto.marshaler_all) = false;
option (gogoproto.messagename_all) = false;
option (gogoproto.onlyone_all) = false;
option (gogoproto.populate_all) = false;
option (gogoproto.protosizer_all) = false;
option (gogoproto.sizer_all) = false;
option (gogoproto.stable_marshaler_all) = false;
option (gogoproto.stringer_all) = false;
option (gogoproto.testgen_all) = false;
option (gogoproto.typedecl_all) = false;
option (gogoproto.unmarshaler_all) = false;
option (gogoproto.unsafe_marshaler_all) = false;
option (gogoproto.unsafe_unmarshaler_all) = false;
option (gogoproto.verbose_equal_all) = false;

enum ProtocolErrCode {
  ProtocolUndefined = 0; // default value, should never be set manually

  //
  // Berty Protocol (starting at 2001)
  //

  ProtocolTODO = 2001; // indicates that you plan to write a custom error handler later
  ErrProtocolNotImplemented = 2002;
  ErrProtocolInternal = 2003; // can be used to translate an "unknown" error (without Code), i.e., in gRPC
  ErrProtocolSigChainNoEntries = 2004;
  ErrProtocolSigChainInvalidEntryType = 2005;
  ErrProtocolSigChainAlreadyInitialized = 2006;
  ErrProtocolSigChainPermission = 2007;
  ErrProtocolSigChainOperationAlreadyDone = 2008;
  ErrProtocolHandshakeNoPayload = 2009;
  ErrProtocolHandshakeInvalidFlow = 2010;
  ErrProtocolHandshakeInvalidFlowStepNotFound = 2011;
  ErrProtocolHandshakeParams = 2012;
  ErrProtocolHandshakeNoAuthReturned = 2013;
  ErrProtocolHandshakeInvalidKeyType = 2014;
  ErrProtocolHandshakeInvalidSignature = 2015;
  ErrProtocolHandshakeSessionInvalid = 2016;
  ErrProtocolHandshakeKeyNotInSigChain = 2017;
  ErrProtocolHandshakeDecrypt = 2018;
  ErrProtocolInvalidInput = 2019;
  ErrProtocolMissingInput = 2020;
}